# CodeGraph

./: .clinerules  .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  high-spending.md  package-lock.json
apps/backend/: .clinerules  .env.example  Makefile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 2d8c6a39a218_add_cookie_auth_foundation.py  2e5f7a42b3c1_add_email_verification.py  3f1a2b5c7d8e_fix_email_tokens_defaults.py  4a2b3c4d5e6f_add_two_factor_authentication.py  5b3c4d5e6f7g_add_oauth_accounts.py  64932cb045bd_add_missing_pk_indexes.py  6c4d5e6f7g8h_add_user_profile_fields.py  928d4b3e14de_add_usage_metrics_table.py  a3fd7b821b30_add_iteration_and_verdict_fields_to_.py  a91a3381223a_add_webhook_tables.py  b4e5f6a7c8d9_add_council_review_tables.py  c5d6e7f8g9h0_add_rbac_permission_system.py  dc9632ea5e9f_initial_schema.py
apps/backend/docs/: OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_QUICKSTART.md  OAUTH_SETUP.md
apps/backend/src/: main.py
apps/backend/src/agents/: __init__.py  base.py  cancellation.py  code_formatter.py  coder.py  council.py  council_node.py  execution.py  graph.py  interrupts.py  models.py  plan_validator.py  planner.py  resilience.py  reviewer.py  state.py  streaming.py  test_analyzer.py  tester.py  tracing.py  tracking.py  workflows.py
apps/backend/src/agents/analyzers/: __init__.py  code_quality.py  test_analyzer.py
apps/backend/src/agents/council/: __init__.py  node.py  orchestrator.py
apps/backend/src/agents/infrastructure/: __init__.py  checkpointer.py  error_handler.py  models.py  streaming.py  tracing.py  tracking.py
apps/backend/src/agents/nodes/: __init__.py  coder.py  planner.py  react_executor.py  reviewer.py  supervisor.py  tester.py
apps/backend/src/agents/processing/: __init__.py  parser.py
apps/backend/src/api/: admin.py  agents.py  auth.py  deps.py  metrics.py  oauth.py  tasks.py  test_email.py  two_factor.py  users.py  webhooks.py
apps/backend/src/core/: config.py  cookies.py  csrf.py  database.py  encryption.py  error_codes.py  exception_handlers.py  exceptions.py  logging.py  permissions.py  security.py
apps/backend/src/models/: __init__.py  agent_run.py  backup_code.py  base.py  council_review.py  email_verification_token.py  oauth_account.py  password_reset_token.py  permission.py  refresh_token.py  repository.py  role.py  task.py  usage_metrics.py  user.py  user_session.py  webhook.py
apps/backend/src/schemas/: __init__.py  agent.py  council.py  error.py  metrics.py  permission.py  repository.py  task.py  user.py  webhook.py
apps/backend/src/services/: __init__.py  agent_run_service.py  auth_service.py  cache_service.py  cost_calculator.py  execution_history_service.py  metrics_service.py  oauth_service.py  task_service.py  two_factor_service.py  webhook_service.py
apps/backend/src/services/email/: __init__.py  base.py  mock.py  service.py  smtp.py
apps/backend/src/tools/: __init__.py  base.py  exceptions.py  file_operations.py  registry.py  schemas.py
apps/backend/src/tools/database/: __init__.py  connection.py  introspection.py  query.py
apps/backend/src/tools/execution/: __init__.py  (+6 more)
apps/backend/src/utils/: github.py
apps/backend/tests/: conftest.py
apps/backend/tests/ai/: conftest.py  test_agents.py  test_coder_node.py  test_review_loop_and_timeouts.py  test_reviewer_node.py  test_tester_node.py  test_workflow.py  test_workflow_integration.py
apps/backend/tests/integration/: conftest.py  test_auth_2fa_mandatory.py  test_auth_email_integration.py  test_authorization.py  test_council_workflow.py  test_execution_history.py  test_oauth_token_expiry.py  test_tasks_integration.py  test_tasks_router.py  test_users_integration.py  test_users_router.py
apps/backend/tests/unit/: conftest.py  test_agent_models.py  test_agent_run_tracking.py  test_api_health.py  test_code_formatter.py  test_code_parser.py  test_code_quality.py  test_config.py  test_cost_calculator.py  test_council.py  test_email_models.py  test_email_service.py  test_error_handler.py  test_oauth_service.py  test_permissions.py  test_plan_validator.py  test_reviewer_node.py  test_smtp_service.py  test_test_analyzer.py  test_two_factor_service.py  test_webhook.py
(+544 files in other folders)
